third_party/kiva-ep/vendor/mathgl-2.4.4/include/mgl2/mgl_pas.pas

//-----------------------------------------------------------------------------
{== ../../include/mgl2/canvas_cf.h ==}
//-----------------------------------------------------------------------------
/// Create HMGL object with specified sizes
function  mgl_create_graph(width: integer;height: integer): HMGL; cdecl; external libmgl;
/// Delete HMGL object
procedure  mgl_delete_graph(gr: HMGL); cdecl; external libmgl;
/// Set size of frame in pixels. Normally this function is called internally.
procedure  mgl_set_size(gr: HMGL;width: integer;height: integer); cdecl; external libmgl;
/// Set default parameters for plotting
procedure  mgl_set_def_param(gr: HMGL); cdecl; external libmgl;
/// Combine plots from 2 canvases. Result will be saved into gr
procedure  mgl_combine_gr(gr: HMGL;gr2: HMGL); cdecl; external libmgl;
/// Force preparing the image. It can be useful for OpenGL mode mostly.
procedure  mgl_finish(gr: HMGL); cdecl; external libmgl;
/// Force preparing the image and save result into background one.
procedure  mgl_rasterize(gr: HMGL); cdecl; external libmgl;
/// Set tick length
procedure  mgl_set_tick_len(gr: HMGL;len: double;stt: double); cdecl; external libmgl;
/// Set axis and ticks style
procedure  mgl_set_axis_stl(gr: HMGL;const stl: PChar;const tck: PChar;const sub: PChar); cdecl; external libmgl;
/// Auto adjust ticks
procedure  mgl_adjust_ticks(gr: HMGL;const dir: PChar); cdecl; external libmgl;
/// Auto adjust ticks and set ticks format ("+E0123456789-fF")
procedure  mgl_adjust_ticks_ext(gr: HMGL;const dir: PChar;const stl: PChar); cdecl; external libmgl;
/// Set the ticks parameters
procedure  mgl_set_ticks(gr: HMGL;dir: char;d: double;ns: integer;org: double); cdecl; external libmgl;
/// Set the ticks parameters and specify ticks factor string
procedure  mgl_set_ticks_fact(gr: HMGL;dir: char;d: double;ns: integer;org: double;const fact: PChar); cdecl; external libmgl;
procedure  mgl_set_ticks_factw(gr: HMGL;dir: char;d: double;ns: integer;org: double;const fact: PWideChar); cdecl; external libmgl;
/// Set manual ticks text (\n separated). Use "" to disable this feature.
procedure  mgl_set_ticks_str(gr: HMGL;dir: char;const lbl: PChar;add: integer); cdecl; external libmgl;
procedure  mgl_set_ticks_wcs(gr: HMGL;dir: char;const lbl: PWideChar;add: integer); cdecl; external libmgl;
/// Set manual ticks position and text (\n separated). Use "" to disable this feature.
procedure  mgl_set_ticks_val(gr: HMGL;dir: char;const val: HMDT;const lbl: PChar;add: integer); cdecl; external libmgl;
procedure  mgl_set_ticks_valw(gr: HMGL;dir: char;const val: HMDT;const lbl: PWideChar;add: integer); cdecl; external libmgl;
/// Add manual tick at given position. Use "" to disable this feature.
procedure  mgl_add_tick(gr: HMGL;dir: char;val: double;const lbl: PChar); cdecl; external libmgl;
procedure  mgl_add_tickw(gr: HMGL;dir: char;val: double;const lbl: PWideChar); cdecl; external libmgl;
/// Tune ticks
procedure  mgl_tune_ticks(gr: HMGL;tune: integer;fact_pos: double); cdecl; external libmgl;
/// Set templates for ticks
procedure  mgl_set_tick_templ(gr: HMGL;dir: char;const templ: PChar); cdecl; external libmgl;
procedure  mgl_set_tick_templw(gr: HMGL;dir: char;const templ: PWideChar); cdecl; external libmgl;
/// Set time templates for ticks
procedure  mgl_set_ticks_time(gr: HMGL;dir: char;d: double;const t: PChar); cdecl; external libmgl;
/// Set additional shift of tick labels
procedure  mgl_set_tick_shift(gr: HMGL;sx: double;sy: double;sz: double;sc: double); cdecl; external libmgl;
/// Draws bounding box outside the plotting volume
procedure  mgl_box(gr: HMGL); cdecl; external libmgl;
/// Draws bounding box outside the plotting volume with color c
procedure  mgl_box_str(gr: HMGL;const col: PChar;ticks: integer); cdecl; external libmgl;
/// Draw axises with ticks in direction(s) dir.
procedure  mgl_axis(gr: HMGL;const dir: PChar;const stl: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw grid lines perpendicular to direction(s) dir.
procedure  mgl_axis_grid(gr: HMGL;const dir: PChar;const pen: PChar;const opt: PChar); cdecl; external libmgl;
/// Print the label text for axis dir.
procedure  mgl_label(gr: HMGL;dir: char;const text: PChar;pos: double;const opt: PChar); cdecl; external libmgl;
procedure  mgl_labelw(gr: HMGL;dir: char;const text: PWideChar;pos: double;const opt: PChar); cdecl; external libmgl;
/// Draw colorbar at edge of axis
procedure  mgl_colorbar(gr: HMGL;const sch: PChar); cdecl; external libmgl;
/// Draw colorbar at manual position
procedure  mgl_colorbar_ext(gr: HMGL;const sch: PChar;x: double;y: double;w: double;h: double); cdecl; external libmgl;
/// Draw colorbar with manual colors at edge of axis
procedure  mgl_colorbar_val(gr: HMGL;const dat: HMDT;const sch: PChar); cdecl; external libmgl;
/// Draw colorbar with manual colors at manual position
procedure  mgl_colorbar_val_ext(gr: HMGL;const dat: HMDT;const sch: PChar;x: double;y: double;w: double;h: double); cdecl; external libmgl;
/// Add string to legend
procedure  mgl_add_legend(gr: HMGL;const text: PChar;const style: PChar); cdecl; external libmgl;
procedure  mgl_add_legendw(gr: HMGL;const text: PWideChar;const style: PChar); cdecl; external libmgl;
/// Clear saved legend string
procedure  mgl_clear_legend(gr: HMGL); cdecl; external libmgl;
/// Draw legend of accumulated strings at position {x,y}
procedure  mgl_legend_pos(gr: HMGL;x: double;y: double;const font: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw legend of accumulated strings
procedure  mgl_legend(gr: HMGL;where: integer;const font: PChar;const opt: PChar); cdecl; external libmgl;
/// Set number of marks in legend sample
procedure  mgl_set_legend_marks(gr: HMGL;num: integer); cdecl; external libmgl;
/// Show current image
procedure  mgl_show_image(gr: HMGL;const viewer: PChar;keep: integer); cdecl; external libmgl;
/// Write the frame in file (depending extension, write current frame if fname is empty)
procedure  mgl_write_frame(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using BMP format
procedure  mgl_write_tga(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using BMP format
procedure  mgl_write_bmp(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using JPEG format
procedure  mgl_write_jpg(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using PNG format with transparency
procedure  mgl_write_png(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using PNG format without transparency
procedure  mgl_write_png_solid(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using PostScript format as bitmap
procedure  mgl_write_bps(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using PostScript format
procedure  mgl_write_eps(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using SVG format
procedure  mgl_write_svg(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using LaTeX format
procedure  mgl_write_tex(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using OBJ format
procedure  mgl_write_obj(gr: HMGL;const fname: PChar;const descr: PChar;use_png: integer); cdecl; external libmgl;
/// Write the frame in file using OBJ format (old version)
procedure  mgl_write_obj_old(gr: HMGL;const fname: PChar;const descr: PChar;use_png: integer); cdecl; external libmgl;
/// Write the frame in file using STL format (faces only)
procedure  mgl_write_stl(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using OFF format
procedure  mgl_write_off(gr: HMGL;const fname: PChar;const descr: PChar;colored: integer); cdecl; external libmgl;
/// Write the frame in file using XYZ format
procedure  mgl_write_xyz(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Write the frame in file using PRC format
procedure  mgl_write_prc(gr: HMGL;const fname: PChar;const descr: PChar;make_pdf: integer); cdecl; external libmgl;
/// Write the frame in file using GIF format (only for current frame!)
procedure  mgl_write_gif(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Start write frames to cinema using GIF format
procedure  mgl_start_gif(gr: HMGL;const fname: PChar;ms: integer); cdecl; external libmgl;
/// Stop writing cinema using GIF format
procedure  mgl_close_gif(gr: HMGL); cdecl; external libmgl;
/// Export points and primitives in file using MGLD format
procedure  mgl_export_mgld(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
/// Import points and primitives from file using MGLD format
procedure  mgl_import_mgld(gr: HMGL;const fname: PChar;add: integer); cdecl; external libmgl;
/// Export in JSON format suitable for later drawing by JavaScript
procedure  mgl_write_json(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
procedure  mgl_write_json_z(gr: HMGL;const fname: PChar;const descr: PChar); cdecl; external libmgl;
function mgl_get_json(gr: HMGL): PChar; cdecl; external libmgl;
/// Get RGB values of current bitmap
function mgl_get_rgb(gr: HMGL): PByte; cdecl; external libmgl;
/// Get RGBA values of current bitmap
function mgl_get_rgba(gr: HMGL): PByte; cdecl; external libmgl;
/// Get RGB values of current bitmap
function mgl_get_background(gr: HMGL): PByte; cdecl; external libmgl;
/// Set object/subplot id
procedure  mgl_set_obj_id(gr: HMGL;id: integer); cdecl; external libmgl;
/// Get object id
function  mgl_get_obj_id(gr: HMGL;x: integer;y: integer): integer; cdecl; external libmgl;
/// Get subplot id
function  mgl_get_spl_id(gr: HMGL;x: integer;y: integer): integer; cdecl; external libmgl;
/// Get width of the image
function  mgl_get_width(gr: HMGL): integer; cdecl; external libmgl;
/// Get height of the image
function  mgl_get_height(gr: HMGL): integer; cdecl; external libmgl;
/// Calculate 3D coordinate {x,y,z} for screen point {xs,ys}
procedure  mgl_calc_xyz(gr: HMGL;xs: integer;ys: integer;x: Pmreal;y: Pmreal;z: Pmreal); cdecl; external libmgl;
/// Calculate screen point {xs,ys} for 3D coordinate {x,y,z}
procedure  mgl_calc_scr(gr: HMGL;x: double;y: double;z: double;xs: Pint;ys: Pint); cdecl; external libmgl;
/// Check if {xs,ys} is close to active point with accuracy d, and return its position or -1
function  mgl_is_active(gr: HMGL;xs: integer;ys: integer;d: integer): integer; cdecl; external libmgl;
/// Create new frame.
function  mgl_new_frame(gr: HMGL): integer; cdecl; external libmgl;
/// Finish frame drawing
procedure  mgl_end_frame(gr: HMGL); cdecl; external libmgl;
/// Get the number of created frames
function  mgl_get_num_frame(gr: HMGL): integer; cdecl; external libmgl;
/// Reset frames counter (start it from zero)
procedure  mgl_reset_frames(gr: HMGL); cdecl; external libmgl;
/// Get drawing data for i-th frame (work if MGL_VECT_FRAME is set on)
procedure  mgl_get_frame(gr: HMGL;i: integer); cdecl; external libmgl;
/// Set drawing data for i-th frame (work if MGL_VECT_FRAME is set on)
procedure  mgl_set_frame(gr: HMGL;i: integer); cdecl; external libmgl;
/// Append drawing data from i-th frame (work if MGL_VECT_FRAME is set on)
procedure  mgl_show_frame(gr: HMGL;i: integer); cdecl; external libmgl;
/// Delete primitives for i-th frame (work if MGL_VECT_FRAME is set on)
procedure  mgl_del_frame(gr: HMGL;i: integer); cdecl; external libmgl;
/// Clear list of primitives for current drawing
procedure  mgl_clear_frame(gr: HMGL); cdecl; external libmgl;
